--- a/8/jre/alpine/Dockerfile
+++ b/8/jre/alpine/Dockerfile
@@ -2,8 +2,10 @@ FROM openjdk:8-jre-alpine
 LABEL Author="熊亚运 <xiongyayun428@163.com>"
 
 # Install cURL
-RUN echo -e "https://mirror.tuna.tsinghua.edu.cn/alpine/v3.9/main\n\
-https://mirror.tuna.tsinghua.edu.cn/alpine/v3.9/community" > /etc/apk/repositories
+# RUN echo -e "https://mirror.tuna.tsinghua.edu.cn/alpine/v3.9/main\n\
+# https://mirror.tuna.tsinghua.edu.cn/alpine/v3.9/community" > /etc/apk/repositories
+RUN echo -e "http://dl-cdn.alpinelinux.org/alpine/v3.9/main/\n\
+http://dl-cdn.alpinelinux.org/alpine/v3.9/community" > /etc/apk/repositories
 
 RUN apk --update add curl bash ttf-dejavu && \
     rm -rf /var/cache/apk/*
